--- a/chat-server/src/main/resources/application.yml
+++ b/chat-server/src/main/resources/application.yml
@@ -2,14 +2,14 @@ server:
   port: 8081
   websocket-port: 9090
   servlet:
-    context-path: "/v1"
+    context-path: "/api/v1"
 
 hash:
   salt: "g3e5o1t2g3n7e4m6k4k8h4v7l7g6n5z3"
 
-jwt:
+token:
   secret: "xzcccim"
-  exp: 30
+  exp: 60 * 60 * 24  # 过期时间默认为秒
 
 spring:
   datasource:
@@ -17,3 +17,9 @@ spring:
     username: root
     password: "@Wsnidcl1"
     url: jdbc:mysql://localhost:3306/im?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
+  redis:
+    database: 5
+    host: 127.0.0.1
+    port: 6379
+#    password: "@Wsnidcl1"
+
