--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
 
-        <springboot>2.6.7</springboot>
+        <springboot>2.5.6</springboot>
 
         <!--        <netty.version>4.0.33.Final</netty.version>-->
         <netty.version>4.1.50.Final</netty.version>
@@ -98,11 +98,11 @@
         </dependency>
 
 
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>${guava.version}</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.google.guava</groupId>-->
+<!--            <artifactId>guava</artifactId>-->
+<!--            <version>${guava.version}</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -161,7 +161,13 @@
             <artifactId>logback-core</artifactId>
             <version>1.2.4</version>
         </dependency>
-       
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>${springboot}</version>
+        </dependency>
+
 
     </dependencies>
 
