增加单聊会话创建、websocket session逻辑

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>chat-server</module>
         <module>chat_netty_server</module>
+        <module>chat-commom</module>
     </modules>
 
     <properties>
