增加protobuf，和loginRequesthandler处理

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <curator.version>2.10.0</curator.version>
-        <guava.version>17.0</guava.version>
+        <guava.version>32.0.1-jre</guava.version>
         <httpclientutil.version>1.0</httpclientutil.version>
         <feign.form.spring.version>3.0.3</feign.form.spring.version>
         <fastjson.version>1.2.29</fastjson.version>
@@ -39,6 +39,8 @@
         <druid.version>1.2.1</druid.version>
 
         <redisson.version>3.16.1</redisson.version>
+
+        <protobuf.version>3.25.1</protobuf.version>
 
     </properties>
 
@@ -83,12 +85,6 @@
         </dependency>
 
         <dependency>
-            <groupId>com.google.protobuf</groupId>
-            <artifactId>protobuf-java</artifactId>
-            <version>${protobuf.version}</version>
-        </dependency>
-
-        <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
@@ -101,11 +97,11 @@
         </dependency>
 
 
-<!--        <dependency>-->
-<!--            <groupId>com.google.guava</groupId>-->
-<!--            <artifactId>guava</artifactId>-->
-<!--            <version>${guava.version}</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -175,6 +171,12 @@
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
             <version>${redisson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>${protobuf.version}</version>
         </dependency>
 
     </dependencies>
