--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,9 @@
     <packaging>pom</packaging>
     <modules>
         <module>chat-server</module>
-        <module>chat_netty_server</module>
+        <module>chat-netty-server</module>
         <module>chat-commom</module>
+        <module>chat-netty-client</module>
     </modules>
 
     <properties>
