--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>chat-server</module>
-        <module>chat_netty_server</module>
+        <module>chat-netty-server</module>
         <module>chat-commom</module>
     </modules>
 
@@ -93,7 +93,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.10</version>
+            <version>1.18.20</version>
         </dependency>
 
 
