增加netty-client和调试client->server，编解码

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>chat-server</module>
         <module>chat-netty-server</module>
         <module>chat-commom</module>
+        <module>chat-netty-client</module>
     </modules>
 
     <properties>
