--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <springboot>2.5.6</springboot>
 
         <!--        <netty.version>4.0.33.Final</netty.version>-->
-        <netty.version>4.1.50.Final</netty.version>
+        <netty.version>4.1.77.Final</netty.version>
         <protobuf.version>3.6.1</protobuf.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -42,6 +42,8 @@
         <redisson.version>3.16.1</redisson.version>
 
         <protobuf.version>3.25.1</protobuf.version>
+
+        <micrometer.version>1.11.1</micrometer.version>
 
     </properties>
 
@@ -178,6 +180,22 @@
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
             <version>${protobuf.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>${springboot}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-core</artifactId>
+            <version>${micrometer.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <version>${micrometer.version}</version>
         </dependency>
 
     </dependencies>
