--- a/pom.xml
+++ b/pom.xml
@@ -198,6 +198,14 @@
             <version>${micrometer.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-core -->
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>4.24.0</version>
+        </dependency>
+
+
 
     </dependencies>
 
