--- a/chat-server/src/main/resources/application.yml
+++ b/chat-server/src/main/resources/application.yml
@@ -22,6 +22,9 @@ spring:
     redisson_database: 5
     host: 127.0.0.1
     port: 6379
+  liquibase:
+    change-log: classpath:liquibase/master.yml
+    enabled: true
 #    password: "@Wsnidcl1"
 
 friendship:
