--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,12 @@
             <version>4.24.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+
 
 
     </dependencies>
