暂时不用微信扫码登录

--- a/chat-server/src/main/resources/application.yml
+++ b/chat-server/src/main/resources/application.yml
@@ -43,16 +43,29 @@ management:
   metrics:
     tags:
       application: ${server.servlet.context-path}
+wx:
+  config:
+    originalid: gh_5173f25488b7
+    appid: wxe3c28f9365bbf6cb
+    appSecret: a1a6bf5a407d655bc2b8ed0c3e87474c
+    token: xzccc
+    qrCodeUrl: https://api.weixin.qq.com/cgi-bin/qrcode/create?access_token=TOKEN                                     #获取二维码
+    accessTokenUrl: https://api.weixin.qq.com/cgi-bin/token?grant_type=client_credential&appid=APPID&secret=APPSECRET       #基础接口的token
+    openIdUrl: https://api.weixin.qq.com/cgi-bin/token?grant_type=client_credential&appid=APPID&secret=APPSECRET      #获取openId
+    userInfoUrl: https://api.weixin.qq.com/sns/userinfo?access_token=ACCESS_TOKEN&openid=OPENID&lang=zh_CN
 
-config:
-  originalid: gh_5173f25488b7
-  appid: wxe3c28f9365bbf6cb
-  token: xzccc
-  access-token-url: https://api.weixin.qq.com/cgi-bin/token
-  gzh-qrcode-create-url: https://api.weixin.qq.com/cgi-bin/qrcode/create
-  gzh-qrcode-url: https://mp.weixin.qq.com/cgi-bin/showqrcode
 
 
 app:
   config:
     api-version: v1
+
+ok:
+  http:
+    connect-timeout: 60
+    read-timeout: 60
+    write-timeout: 60
+    # 连接池中整体的空闲连接的最大数量
+    max-idle-connections: 200
+    # 连接空闲时间最多为 300 秒
+    keep-alive-duration: 300
