--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <protobuf.version>3.25.1</protobuf.version>
 
         <micrometer.version>1.11.1</micrometer.version>
+        <fastjson.version>2.0.25</fastjson.version>
 
     </properties>
 
@@ -211,6 +212,19 @@
             <version>1.6.1</version>
         </dependency>
 
+        <!-- okhttp3 依赖 -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.9.3</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.alibaba.fastjson2/fastjson2 -->
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
 
 
     </dependencies>
