--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
 
         <micrometer.version>1.11.1</micrometer.version>
         <fastjson.version>2.0.25</fastjson.version>
+        <houbb.version>0.13.1</houbb.version>
 
     </properties>
 
@@ -230,7 +231,11 @@
             <artifactId>fastjson2</artifactId>
             <version>${fastjson.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.houbb</groupId>
+            <artifactId>sensitive-word</artifactId>
+            <version>${houbb.version}</version>
+        </dependency>
 
 
     </dependencies>
