--- a/chat-server/src/main/resources/liquibase/master.yml
+++ b/chat-server/src/main/resources/liquibase/master.yml
@@ -9,3 +9,14 @@ databaseChangeLog:
             splitStatements: true
             path: liquibase/db/changelog/db.changelog-20240226-17.sql
             stripComments: true
+  - changeSet:
+      id: 20240304-21
+      author: xzccc
+      changes:
+        - addColumn:
+            tableName: im_user
+            columns:
+              - column:
+                  name: avatar
+                  type: varchar(255)
+
